# sp2025_homeworks

./: .gitignore  pyproject.toml  requirements.txt
hw1/: PS_1.tex  hw1_background_mathematics.ipynb
hw2/: hw2_shallow_and_deep_nws.ipynb  ps_2.tex
